cambios de alt, bordes, colores y botones

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -17,30 +17,31 @@
 
 <body>
     <header>
+      <header>
         <section class="inicio-titulo">
-            <nav class="navbar navbar-expand-lg navbar-light bg-info">
+            <nav class="navbar navbar-expand-lg navbar-light bg-warning">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="../index.html"> <b>  Mateolis  </b></a>
+                  <a class="navbar-brand" href="../index.html"> <b> Mateolis </b></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse  nav" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page"  href="../index.html"  ><button type="button" class="btn btn-primary">inicio</button></a>
+                        <a class="nav-link active" aria-current="page"  href="../index.html"  ><button type="button" class="btn btn-secondary">inicio</button></a>
                         
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="productos.html"><button type="button" class="btn btn-primary">Productos</button></a>
+                        <a class="nav-link active" href="productos.html"><button type="button" class="btn btn-secondary">Productos</button></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="quienes-somos.html"><button type="button" class="btn btn-primary">Quienes somos</button></a>
+                        <a class="nav-link active" href="quienes-somos.html"><button type="button" class="btn btn-secondary">Quienes somos</button></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="contacto.html"><button type="button" class="btn btn-primary">Contacto</button></a>
+                        <a class="nav-link active" href="contacto.html"><button type="button" class="btn btn-secondary">Contacto</button></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="tips-de-hacer-mates.html"><button type="button" class="btn btn-primary">Tips para hacen un buen mate</button></a>
+                        <a class="nav-link active" href="tips-de-hacer-mates.html"><button type="button" class="btn btn-secondary">Tips para hacen un buen mate</button></a>
                       </li>
                     </ul>
                   </div>
@@ -52,7 +53,7 @@
 
 
     <section class="inicio-contacto">
-        <h2 class="titulo-contacto"> Contáctanos </h2>
+        <h2 class="titulo-contacto"> CONTÁCTANOS</h2>
 
         <form class="formulario">
           <div class="row mb-3">
@@ -119,15 +120,15 @@
         <section class="iconos">
             <div>
               <a href="https://www.instagram.com/">
-                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt=""/>
+                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt="icono de instagram"/>
             </a>
 
             <a href="https://www.facebook.com/">
-                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="" />
+                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="icono de facebook" />
             </a>
 
             <a href="https://web.whatsapp.com/">
-                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="" />
+                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="icono de whatsapp" />
 
             </a>
 
