--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <section class="inicio-titulo">
-            <nav class="navbar navbar-expand-lg navbar-light bg-info">
+            <nav class="navbar navbar-expand-lg navbar-light bg-warning">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="../index.html"> <b> Mateolis </b></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,20 +26,20 @@
                   <div class="collapse navbar-collapse  nav" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page"  href="../index.html"  ><button type="button" class="btn btn-primary">inicio</button></a>
+                        <a class="nav-link active" aria-current="page"  href="../index.html"  ><button type="button" class="btn btn-secondary">inicio</button></a>
                         
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="productos.html"><button type="button" class="btn btn-primary">Productos</button></a>
+                        <a class="nav-link active" href="productos.html"><button type="button" class="btn btn-secondary">Productos</button></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="quienes-somos.html"><button type="button" class="btn btn-primary">Quienes somos</button></a>
+                        <a class="nav-link active" href="quienes-somos.html"><button type="button" class="btn btn-secondary">Quienes somos</button></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="contacto.html"><button type="button" class="btn btn-primary">Contacto</button></a>
+                        <a class="nav-link active" href="contacto.html"><button type="button" class="btn btn-secondary">Contacto</button></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="tips-de-hacer-mates.html"><button type="button" class="btn btn-primary">Tips para hacen un buen mate</button></a>
+                        <a class="nav-link active" href="tips-de-hacer-mates.html"><button type="button" class="btn btn-secondary">Tips para hacen un buen mate</button></a>
                       </li>
                     </ul>
                   </div>
@@ -50,9 +50,9 @@
 
 
     <section class="nosotros-fondo">
-        <h2 class="nosotros">Quienes somos?</h2>
+        <h2 class="nosotros">QUIENES SOMOS?</h2>
         <div>
-            <p class="texto-nosotros"> <img src="../img/quienes-somos.webp" alt="seccion-contacto" class="img-nosotros"> Lorem ipsum dolor
+            <p class="texto-nosotros"> <img src="../img/quienes-somos.webp" alt="termo con un mate" class="img-nosotros"> Lorem ipsum dolor
                 sit amet consectetur adipisicing elit. Totam, pariatur eaque!
                 Fugiat sit temporibus,
                 fuga alias doloribus beatae ut quis ullam eos ad velit, laborum voluptates quia recusandae possimus sunt
@@ -72,15 +72,15 @@
         <section>
             <div>
               <a href="https://www.instagram.com/">
-                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt=""/>
+                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt="icono de instagram"/>
             </a>
 
             <a href="https://www.facebook.com/">
-                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="" />
+                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="icono de facebook" />
             </a>
 
             <a href="https://web.whatsapp.com/">
-                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="" />
+                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="icono de whatsapp" />
 
             </a>
             </div>
