--- a/secciones/tips-de-hacer-mates.html
+++ b/secciones/tips-de-hacer-mates.html
@@ -15,31 +15,31 @@
 </head>
 
 <body>
-    <header>
+      <header>
         <section class="inicio-titulo">
-            <nav class="navbar navbar-expand-lg navbar-light bg-info">
+            <nav class="navbar navbar-expand-lg navbar-light bg-warning">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="../index.html"> <b> Mateolis</b></a>
+                  <a class="navbar-brand" href="../index.html"> <b> Mateolis </b></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse  nav" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page"  href="../index.html"  ><button type="button" class="btn btn-primary">inicio</button></a>
+                        <a class="nav-link active" aria-current="page"  href="../index.html"  ><button type="button" class="btn btn-secondary">inicio</button></a>
                         
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="productos.html"><button type="button" class="btn btn-primary">Productos</button></a>
+                        <a class="nav-link active" href="productos.html"><button type="button" class="btn btn-secondary">Productos</button></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="quienes-somos.html"><button type="button" class="btn btn-primary">Quienes somos</button></a>
+                        <a class="nav-link active" href="quienes-somos.html"><button type="button" class="btn btn-secondary">Quienes somos</button></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="contacto.html"><button type="button" class="btn btn-primary">Contacto</button></a>
+                        <a class="nav-link active" href="contacto.html"><button type="button" class="btn btn-secondary">Contacto</button></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="tips-de-hacer-mates.html"><button type="button" class="btn btn-primary">Tips para hacen un buen mate</button></a>
+                        <a class="nav-link active" href="tips-de-hacer-mates.html"><button type="button" class="btn btn-secondary">Tips para hacen un buen mate</button></a>
                       </li>
                     </ul>
                   </div>
@@ -51,7 +51,7 @@
     <section class="fondo-tips">
     <section class="titulo">
       <div>
-        <h2 >Los mejores tips para hacer un buen mate!!</h2>
+        <h2 class="titulo-tips">LOS MEJORES TIPS PARA HACER UN BUEN MATE!!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nulla expedita, atque veritatis pariatur fuga
             minus fugit nihil deleniti, a magnam dicta ducimus fugiat debitis, ullam modi dignissimos corporis. Ipsam!
         </p>
@@ -78,15 +78,15 @@
         <section>
             <div>
                 <a href="https://www.instagram.com/">
-                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt=""/>
+                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt="icono de instagram"/>
                 </a>
 
                 <a href="https://www.facebook.com/">
-                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="" />
+                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="icono de facebook" />
                 </a>
 
                 <a href="https://web.whatsapp.com/">
-                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="" />
+                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="icono de whatsapp" />
 
                 </a>
 
