--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -11,52 +11,46 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
-    </style>
-     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-      </style>
+  </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+  </style>
   <title>Mateolis</title>
 </head>
 
 <body>
   <header>
     <section class="inicio-titulo">
-      <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"> <b> Mateolis </b></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse  nav" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html"><button type="button"
-                    class="btn btn-primary">inicio</button></a>
-
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="productos.html"><button type="button"
-                    class="btn btn-primary">Productos</button></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="quienes-somos.html"><button type="button"
-                    class="btn btn-primary">Quienes somos</button></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="contacto.html"><button type="button"
-                    class="btn btn-primary">Contacto</button></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="tips-de-hacer-mates.html"><button type="button"
-                    class="btn btn-primary">Tips para hacen un buen mate</button></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </section>
-  </header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html"> <b> Mateolis </b></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse  nav" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page"  href="../index.html"  ><button type="button" class="btn btn-secondary">inicio</button></a>
+                    
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="productos.html"><button type="button" class="btn btn-secondary">Productos</button></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="quienes-somos.html"><button type="button" class="btn btn-secondary">Quienes somos</button></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="contacto.html"><button type="button" class="btn btn-secondary">Contacto</button></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="tips-de-hacer-mates.html"><button type="button" class="btn btn-secondary">Tips para hacen un buen mate</button></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </section>
+</header>
 
 
   <section class="productos-titulo">
@@ -67,7 +61,7 @@
 
       <h3 class="productos-comprar">MATES</h3>
       <div class="card" style="width: 18rem;">
-        <img src="../img/mates-1.webp" class="card-img-top" alt="seccion-productos">
+        <img src="../img/mates-1.webp" class="card-img-top" alt="tres mates con bombilla">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-882281562-mate-de-vidrio-forrado-eco-cuero-de-animales-_JM#position=6&search_layout=grid&type=item&tracking_id=6adb1b1c-cd42-481d-acad-daad472ccffc"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -75,7 +69,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/mates-2.webp" class="card-img-top" alt="seccion-productos">
+        <img src="../img/mates-2.webp" class="card-img-top" alt="tres mates chiquito de calabaza ">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-1112221852-mate-uruguayo-torpedo-cuero-y-bombilla-pico-de-loro-_JM#position=51&search_layout=grid&type=item&tracking_id=716df2f5-af5b-488c-85ab-5057d2113b05"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -83,7 +77,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/mates-3.webp" class="card-img-top" alt="seccion-productos">
+        <img src="../img/mates-3.webp" class="card-img-top" alt="un mate de calabaza">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-880301865-mate-imperial-personalizado-boca-ancha-calabaza-gruesa-_JM#position=14&search_layout=grid&type=item&tracking_id=b26c371e-beeb-494b-8d1c-497dc2a3792d"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -93,7 +87,7 @@
 
       <h3 class="productos-comprar">BOMBILLAS</h3>
       <div class="card" style="width: 18rem;">
-        <img src="../img/bombilla-1.webp" class="card-img-top" alt="seccion-productos">
+        <img src="../img/bombilla-1.webp" class="card-img-top" alt="bombilla parada">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-918235995-bombilla-mate-pico-de-loro-acero-inoxidable-cuchara-paleta-_JM#position=6&search_layout=grid&type=item&tracking_id=d0e0c442-aaa9-482d-8579-84ae8cbc9d04"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -101,7 +95,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/bombilla-2.webp" class="card-img-top" alt="seccion-productos">
+        <img src="../img/bombilla-2.webp" class="card-img-top" alt="bombilla acostada">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-929615358-bombilla-acero-inoxidable-pico-de-rey-_JM#position=48&search_layout=grid&type=item&tracking_id=d0e0c442-aaa9-482d-8579-84ae8cbc9d04"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -109,7 +103,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/bombilla-3.webp" class="card-img-top" alt="seccion-productos">
+        <img src="../img/bombilla-3.webp" class="card-img-top" alt="bombilla parada">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-1129823442-bombilla-para-mate-stanley-spoon-original-_JM#position=1&search_layout=grid&type=item&tracking_id=39712904-eb2d-4348-a734-7fdb0bc8149c"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -119,7 +113,7 @@
 
       <h3 class="productos-comprar">KIT DE MATES</h3>
       <div class="card" style="width: 18rem;">
-        <img src="../img/kit-de-mate-1.webp" class="card-img-top" alt="seccion-productos">
+        <img src="../img/kit-de-mate-1.webp" class="card-img-top" alt="kit de mate azul">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-867693668-set-matero-kit-completo-equipo-mate-porta-termo-eco-cuero-_JM#position=2&search_layout=grid&type=item&tracking_id=d9e78cce-cc6e-4f00-a3df-c111b25b26cc"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -127,7 +121,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/kit-de-mate-2.webp" class="card-img-top" alt="seccion-productos">
+        <img src="../img/kit-de-mate-2.webp" class="card-img-top" alt="kit de mates de calabaza">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-920512527-set-equipo-mate-completo-pampa-termo-acero-bolso-y-bombilla-_JM?variation=90161168302#reco_item_pos=0&reco_backend=machinalis-seller-items-pdp&reco_backend_type=low_level&reco_client=vip-seller_items-above&reco_id=59c77bd2-1dbf-42b7-96b8-a25e445aa57c"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -135,7 +129,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/kit-de-mate-3.webp" class="card-img-top" alt="seccion-productos">
+        <img src="../img/kit-de-mate-3.webp" class="card-img-top" alt="kit de mate stanley">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-1142881959-kit-matero-stanley-termo-de-13ltrs-mate-bolso-_JM#position=14&search_layout=grid&type=item&tracking_id=2eb8b2ad-ac50-45e6-8c17-37dc7dfeef8c"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -144,7 +138,7 @@
 
       <h3 class="productos-comprar">TERMOS </h3>
       <div class="card" style="width: 18rem;">
-        <img src="../img/termo-1.webp" class="card-img-top" alt="seccion-productos">
+        <img src="../img/termo-1.webp" class="card-img-top" alt="cuatro termos de diferentes colores">
         <div class="card-body">
           <a href="https://www.mercadolibre.com.ar/termo-waterdog-obus-de-acero-inoxidable-1l-black/p/MLA15508618?pdp_filters=category:MLA47769#searchVariation=MLA15508618&position=7&search_layout=stack&type=product&tracking_id=007fad4d-e1d1-4cca-8c81-a3e425ed2fd1"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -152,7 +146,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/termo-2.webp" class="card-img-top" alt="seccion-productos">
+        <img src="../img/termo-2.webp" class="card-img-top" alt="tres termos stanley de diferentes colores">
         <div class="card-body">
           <a href="https://www.mercadolibre.com.ar/stanley-termo-clasico-14-lts-con-tapon-cebador-de-acero-inoxidable-verde/p/MLA15542577?pdp_filters=category:MLA47769#searchVariation=MLA15542577&position=12&search_layout=stack&type=product&tracking_id=007fad4d-e1d1-4cca-8c81-a3e425ed2fd1"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -160,7 +154,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/termo-3.webp" class="card-img-top" alt="seccion-productos">
+        <img src="../img/termo-3.webp" class="card-img-top" alt="un termo simple">
         <div class="card-body">
           <a href="https://www.mercadolibre.com.ar/termo-termolar-r-evolution-rolha-dupla-de-acero-inoxidable-1l-acero/p/MLA9927395?pdp_filters=item_id:MLA1116304047#searchVariation=MLA9927395&position=8&search_layout=stack&type=pad&tracking_id=007fad4d-e1d1-4cca-8c81-a3e425ed2fd1"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -178,17 +172,19 @@
     <section class="iconos">
       <div>
         <a href="https://www.instagram.com/">
-          <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt=""/>
-      </a>
+          <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png"
+            alt="icono de instagram" />
+        </a>
 
-      <a href="https://www.facebook.com/">
-          <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="" />
-      </a>
+        <a href="https://www.facebook.com/">
+          <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="icono de facebook" />
+        </a>
 
-      <a href="https://web.whatsapp.com/">
-          <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="" />
+        <a href="https://web.whatsapp.com/">
+          <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png"
+            alt="icono de whatsapp" />
 
-      </a>
+        </a>
 
 
       </div>
