cambios de alt, bordes,colores y botones

--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -54,7 +54,7 @@
 
 
   <section class="productos-titulo">
-    <h2>LOS MEJORES PRODUCTOS DE ARGENTINA</h2>
+    <h2 class="seccion-producto">LOS MEJORES PRODUCTOS DE ARGENTINA</h2>
 
 
     <section class="productos-titulo-2">
