--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -58,10 +58,7 @@
                 fuga alias doloribus beatae ut quis ullam eos ad velit, laborum voluptates quia recusandae possimus sunt
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo vero natus suscipit voluptatibus inventore
                 earum minus eius velit dignissimos veritatis officiis qui ducimus nulla ut iste, quasi distinctio
-                tempore. Enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem suscipit quas sed ipsam,
-                nostrum corporis hic autem explicabo exercitationem! Sed hic iusto at eligendi harum tempora libero quas
-                blanditiis ad?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo illum aperiam earum
-                nobis ratione adipisci aliquam, tenetur suscipit architecto, dolorum accusantium quis impedit facere
+               quis impedit facere
                 natus magni obcaecati, delectus laborum ex!.</p>
         </div>
 
