--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
             <h4>Nuestras redes sociales</h4>
             <div>
                 <a href="https://www.instagram.com/">
-                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt="icono de instagram"/>
+                    <img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" alt="icono de instagram"/>
                 </a>
 
                 <a href="https://www.facebook.com/">
-                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="icono de facebook" />
+                    <img src="https://img.icons8.com/color/48/000000/facebook-new.png" alt="icono de facebook" />
                 </a>
 
                 <a href="https://web.whatsapp.com/">
-                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="icono de whatsapp" />
+                    <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="icono de whatsapp" />
 
                 </a>
 
